--- a/react-app/src/components/Channels/EditChannel.module.css
+++ b/react-app/src/components/Channels/EditChannel.module.css
@@ -45,7 +45,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10px 0;
+    margin: 0;
 }
 
 .topicLabel {
@@ -59,7 +59,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 5px 0;
+    margin: 0;
 }
 
 .iconWrapper {
@@ -78,7 +78,6 @@
 .iconButtonWrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     margin: 5px;
 }
@@ -121,7 +120,6 @@
     font-size: 30px;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
     background-color: #029e7e;
-    max-height: 50px;
 }
 
 .button:hover {
