--- a/react-app/src/components/Messages/MessageFeed.module.css
+++ b/react-app/src/components/Messages/MessageFeed.module.css
@@ -1,9 +1,9 @@
 .title {
     display: flex;
     justify-content: center;
-    font-size: 100px;
+    font-size: 60px;
     font-weight: 600;
-    margin: 0 0 5px 0;
+    margin: 0;
     text-shadow: 1px 1px 1px darkgreen, 2px 2px 1px #0bda51;
 }
 
