--- a/react-app/src/components/Login/LoginForm.module.css
+++ b/react-app/src/components/Login/LoginForm.module.css
@@ -12,7 +12,7 @@
 
 .legend {
     background-color: #029e7e;
-    font-size: 50px;
+    font-size: 40px;
     padding: 10px;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
     border-radius: 5px;
@@ -24,14 +24,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0 0 20px 0;
+    padding: 5px 0;
+    margin: 0;
+    list-style-type: "\1F6AB";
 }
 
 .error {
-    color: #bfc1c2;
-    font-size: 25px;
-    font-weight: 300;
-    padding: 2px;
+    color: #ff6347;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 2px 0;
 }
 
 .inputs {
@@ -50,7 +52,7 @@
 .emailLabel {
     justify-content: center;
     color: #029e7e;
-    font-size: 40px;
+    font-size: 30px;
     padding: 0 5px 0 0;
     text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
@@ -63,7 +65,7 @@
 
 .passwordLabel {
     color: #029e7e;
-    font-size: 40px;
+    font-size: 30px;
     padding: 0 5px 0 0;
     text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
