added default avatar for new user and place img in nav bar

--- a/react-app/src/components/Nav/NavBar.module.css
+++ b/react-app/src/components/Nav/NavBar.module.css
@@ -24,6 +24,14 @@
     justify-content: space-between;
 }
 
+.profileAvatar {
+    margin: 0;
+}
+.img {
+    height: 40px;
+    width: 40px;
+}
+
 .home {
     display: flex;
     justify-content: center;
