added defaults to seed data, created selection slice of state for channel id

--- a/react-app/src/components/Channels/ChannelCard.module.css
+++ b/react-app/src/components/Channels/ChannelCard.module.css
@@ -1,3 +1,11 @@
+.selectButton {
+    background-color: #029e7e;
+}
+.selectButton:hover {
+    background-color: #0bda51;
+    color: #014421;
+}
+
 .wrapper {
     display: flex;
     flex-direction: column;
