fixed users side bar styling

--- a/react-app/src/components/Friends/FriendCard.module.css
+++ b/react-app/src/components/Friends/FriendCard.module.css
@@ -2,7 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(46, 139, 87, 0.8);
+    background-color: #029e7e;
+    min-width: 100%;
+    padding: 0 100px;
 }
 
 .name {
