fixed friends scroll

--- a/react-app/src/components/Home/Home.module.css
+++ b/react-app/src/components/Home/Home.module.css
@@ -49,4 +49,12 @@
 
 .friends {
     grid-area: friends;
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.friends::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
