--- a/react-app/src/components/Messages/MessageCard.module.css
+++ b/react-app/src/components/Messages/MessageCard.module.css
@@ -1,7 +1,7 @@
 .wrapper {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     padding: 0 5px;
     border-bottom: 2px solid darkgreen;
 }
