--- a/react-app/src/components/Main/Main.module.css
+++ b/react-app/src/components/Main/Main.module.css
@@ -1,3 +1,51 @@
+.background {
+    margin: 0;
+    min-height: 100%;
+    min-width: 100%;
+    background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/stadium_from_above_horizontal.jpg);
+    background-size: cover;
+}
+
 .wrapper {
-    display: flex;
+    display: grid;
+    grid-template-columns: 0.5fr 7.5fr 2fr;
+    grid-template-rows: 100vh;
+    grid-template-areas: "servers children friends";
+}
+
+.servers {
+    grid-area: servers;
+    background-color: transparent;
+    padding: 5px 10px;
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+.servers::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
+.children {
+    grid-area: children;
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.children::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
+.friends {
+    grid-area: friends;
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
+
+.friends::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
