added main to app and edited server layout

--- a/react-app/src/components/Servers/Servers.module.css
+++ b/react-app/src/components/Servers/Servers.module.css
@@ -5,6 +5,12 @@
     justify-content: flex-start;
     z-index: 1;
 }
+.tileWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 .add {
     display: flex;
