--- a/react-app/src/components/Title/Title.module.css
+++ b/react-app/src/components/Title/Title.module.css
@@ -1,14 +1,19 @@
-.topbar {
+.titleWrapper {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 5px;
+    background-color: rgba(46, 139, 87, 0.8);
+    border-radius: 2px;
+    border-style: inset;
+    min-width: 100%;
 }
 
 .title {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    font-size: 30px;
+    justify-content: center;
+    font-size: 50px;
     font-weight: 600;
     border-bottom: 2px solid darkgreen;
     margin: 0 5px 0 0;
