--- a/react-app/src/components/Messages/Messages.module.css
+++ b/react-app/src/components/Messages/Messages.module.css
@@ -15,3 +15,12 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.button {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 5px;
+    margin: 0.5px;
+    background-color: #029e7e;
+}
