styled message title bar and got appropriate user to render

--- a/react-app/src/components/Title/Title.module.css
+++ b/react-app/src/components/Title/Title.module.css
@@ -2,11 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px;
+    padding: 10px;
     background-color: rgba(46, 139, 87, 0.8);
     border-radius: 2px;
     border-style: inset;
     min-width: 100%;
+    border: 5px solid darkgreen;
 }
 
 .title {
