--- a/react-app/src/components/MessageFeed/MessageFeedCard.module.css
+++ b/react-app/src/components/MessageFeed/MessageFeedCard.module.css
@@ -15,6 +15,13 @@
     width: 100%;
 }
 
+.threadTitle {
+    display: flex;
+    border-bottom: 4px solid darkgreen;
+    margin: 0 0 10px 0;
+    padding-bottom: 5px;
+}
+
 .name {
     font-size: 30px;
     font-weight: 600;
