--- a/react-app/src/components/ThreadTitleBar/ThreadTitleBar.module.css
+++ b/react-app/src/components/ThreadTitleBar/ThreadTitleBar.module.css
@@ -1,5 +1,7 @@
 .wrapper {
     display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .user {
@@ -8,6 +10,7 @@
 
 .text {
     display: flex;
+    justify-content: center;
     font-size: 25px;
     padding: 5px;
     align-items: flex-end;
