--- a/react-app/src/components/Login/LoginForm.module.css
+++ b/react-app/src/components/Login/LoginForm.module.css
@@ -1,13 +1,17 @@
 .form {
     background-color: #195905;
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px;
+    height: 40vh;
+    width: 40vh;
 }
 
 .field {
     color: black;
     border: 4px solid #029e7e;
     padding: 25px;
+    min-height: 38vh;
+    min-width: 25vh;
 }
 
 .legend {
