--- a/react-app/src/components/Login/LoginForm.module.css
+++ b/react-app/src/components/Login/LoginForm.module.css
@@ -1,9 +1,9 @@
 .form {
     background-color: #195905;
     border-radius: 5px;
-    padding: 5px;
-    height: 40vh;
-    width: 40vh;
+    padding: 10px;
+    min-height: 40vh;
+    min-width: 40vh;
 }
 
 .field {
@@ -44,7 +44,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 5px 0;
+    align-items: stretch;
+    padding: 25px 0;
 }
 
 .emailWrapper {
@@ -56,7 +57,7 @@
 .emailLabel {
     justify-content: center;
     color: #029e7e;
-    font-size: 30px;
+    font-size: 50px;
     padding: 0 5px 0 0;
     text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
@@ -69,7 +70,7 @@
 
 .passwordLabel {
     color: #029e7e;
-    font-size: 30px;
+    font-size: 50px;
     padding: 0 5px 0 0;
     text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
@@ -81,13 +82,13 @@
 
 .loginButtonContainer {
     display: flex;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     justify-content: center;
     align-items: center;
 }
 .loginButton {
-    width: 100px;
-    font-size: 20px;
+    width: 150px;
+    font-size: 35px;
     font-weight: 800;
     background-color: #029e7e;
 }
@@ -103,8 +104,8 @@
 }
 
 .demoButton {
-    width: 150px;
-    font-size: 20px;
+    width: 250px;
+    font-size: 35px;
     font-weight: 800;
     background-color: #029e7e;
 }
