--- a/react-app/src/components/Modal/Modal.module.css
+++ b/react-app/src/components/Modal/Modal.module.css
@@ -11,8 +11,8 @@
 }
 
 .modalContent {
-    height: 40vh;
-    width: 40vh;
+    height: fit-content;
+    width: fit-content;
     border-radius: 5px;
     background-color: white;
 }
