--- a/react-app/src/components/SplashPage/SplashPage.module.css
+++ b/react-app/src/components/SplashPage/SplashPage.module.css
@@ -4,8 +4,70 @@
     background-size: cover;
 }
 
-.modalWrapper {
+.wrapper {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    background-color: transparent;
+    position: relative;
+    top: 2px;
+}
+
+.titleContainer {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.title {
+    border: 2px solid black;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
+    padding: 10px 20px;
+    background-color: #195905;
+    font-size: 80px;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
+    margin: 5px;
+}
+
+.subtitleContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid black;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
+    padding: 10px 20px;
+    background-color: #195905;
+    font-size: 80px;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
+    margin: 5px;
+}
+
+.subtitle1 {
+    font-size: 80px;
+    margin: 5px;
+}
+.subtitle2 {
+    font-size: 80px;
+    margin: 5px;
+}
+
+.button {
+    border: 2px solid lightgreen;
+    border-radius: 2px;
+    box-shadow: 0 0 5px lightgreen;
+    border-style: inset;
+    background-color: darkgreen;
+    padding: 10px;
+    font-size: 25px;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
+}
+
+.button:hover {
+    background-color: #0bda51;
+    font-size: 28px;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #195905;
 }
