made mutual servers component and added links to icons in threadbar

--- a/react-app/src/components/ThreadTitleBar/ThreadTitleBar.module.css
+++ b/react-app/src/components/ThreadTitleBar/ThreadTitleBar.module.css
@@ -18,3 +18,9 @@
     margin: 0 0 0 10px;
     text-shadow: 1px 1px 1px black, 2px 2px 1px white;
 }
+
+.lower {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
