--- a/react-app/src/components/Servers/Servers.module.css
+++ b/react-app/src/components/Servers/Servers.module.css
@@ -17,3 +17,9 @@
     justify-content: center;
     align-items: center;
 }
+
+.tileButton {
+    display: flex;
+    background-color: transparent;
+    border: none;
+}
