--- a/react-app/src/components/ChannelMessages/ChannelMessages.module.css
+++ b/react-app/src/components/ChannelMessages/ChannelMessages.module.css
@@ -11,4 +11,14 @@
 }
 
 .content {
+    padding: 5px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.updated {
+    display: flex;
+    justify-content: flex-end;
+    padding: 5px;
+    font-weight: 600;
 }
