moved username to flexend

--- a/react-app/src/components/UserInfo/UserInfo.module.css
+++ b/react-app/src/components/UserInfo/UserInfo.module.css
@@ -4,6 +4,9 @@
 }
 
 .username {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     font-size: 30px;
     font-weight: 600;
     color: darkgreen;
