--- a/react-app/src/components/Main/Main.module.css
+++ b/react-app/src/components/Main/Main.module.css
@@ -8,7 +8,7 @@
 .card {
     grid-area: cards;
     background-color: transparent;
-    padding: 5px 10px;
+    padding: 5px;
     overflow-y: scroll;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* Internet Explorer 10+ */
