--- a/react-app/src/components/Server/Server.module.css
+++ b/react-app/src/components/Server/Server.module.css
@@ -39,6 +39,7 @@
 
 .friends {
     grid-area: friends;
+    margin: 5px;
     overflow-y: scroll;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* Internet Explorer 10+ */
