--- a/react-app/src/components/Title/Title.module.css
+++ b/react-app/src/components/Title/Title.module.css
@@ -14,9 +14,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 600;
     border-bottom: 2px solid darkgreen;
-    margin: 0 5px 0 0;
+    margin: 5px;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
