--- a/react-app/src/components/Home/Home.module.css
+++ b/react-app/src/components/Home/Home.module.css
@@ -16,7 +16,7 @@
 .servers {
     grid-area: servers;
     background-color: transparent;
-    padding: 5px 10px;
+    padding: 5px;
     overflow-y: scroll;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* Internet Explorer 10+ */
@@ -41,6 +41,7 @@
 .friends {
     grid-area: friends;
     overflow-y: scroll;
+    margin: 5px;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
