--- a/react-app/src/components/Main/Main.module.css
+++ b/react-app/src/components/Main/Main.module.css
@@ -21,6 +21,7 @@
 .feed {
     grid-area: feed;
     overflow-y: scroll;
+    margin: 5px;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
