styled chat modal a little and working on loading chats after they have been saved to db

--- a/react-app/src/components/Chat/Chat.module.css
+++ b/react-app/src/components/Chat/Chat.module.css
@@ -1,7 +1,17 @@
-.messagesWrapper {
+.wrapper {
     display: flex;
+    flex-direction: column;
+    background-color: #195905;
+    border-radius: 5px;
+    padding: 10px;
 }
 
-.chatWrapper {
+.messages {
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+}
+
+.chat {
     display: flex;
 }
