--- a/react-app/src/components/CreateMessage/CreateMessage.module.css
+++ b/react-app/src/components/CreateMessage/CreateMessage.module.css
@@ -1,11 +1,13 @@
-.newMessageWrapper {
+.wrapper {
+    margin: 0 8px;
+}
+.newMessage {
     display: flex;
     width: 100%;
     position: sticky;
     bottom: 0;
-    margin: 5px 0;
 }
 
-.newMessage {
+.messageInput {
     width: 100%;
 }
