added border to bottom of message content in message feed card

--- a/react-app/src/components/MessageFeedCard/MessageFeedCard.module.css
+++ b/react-app/src/components/MessageFeedCard/MessageFeedCard.module.css
@@ -12,6 +12,8 @@
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
+    border-bottom: 2px solid darkgreen;
+    padding-bottom: 5px;
 }
 
 .name {
