--- a/react-app/src/components/Modal/Modal.module.css
+++ b/react-app/src/components/Modal/Modal.module.css
@@ -1,5 +1,5 @@
 .modalBackground {
-    position: absolute;
+    position: fixed;
     background-color: rgba(0, 0, 0, 0.6);
     top: 0;
     bottom: 0;
