moved edit channel to title bar in feed

--- a/react-app/src/components/FeedTitleBar/FeedTitleBar.module.css
+++ b/react-app/src/components/FeedTitleBar/FeedTitleBar.module.css
@@ -6,6 +6,19 @@
     padding-bottom: 5px;
 }
 
+.channelWrapper {
+    display: flex;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 75px;
+    z-index: 1;
+}
+
 .user {
     display: flex;
 }
