moved add channel button to title bar

--- a/react-app/src/components/Channels/Channels.module.css
+++ b/react-app/src/components/Channels/Channels.module.css
@@ -69,3 +69,16 @@
     border-style: inset;
     padding: 5px;
 }
+
+.titleWrapper {
+    display: flex;
+}
+
+.createButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 55px;
+    z-index: 1;
+}
