added create message button to direct messages title bar

--- a/react-app/src/components/Messages/Messages.module.css
+++ b/react-app/src/components/Messages/Messages.module.css
@@ -16,6 +16,14 @@
     align-items: center;
 }
 
+.createMessage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 20px;
+}
+
 .button {
     display: flex;
     justify-content: flex-start;
