--- a/react-app/src/components/Messages/Messages.module.css
+++ b/react-app/src/components/Messages/Messages.module.css
@@ -21,7 +21,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    right: 20px;
+    left: -60px;
 }
 
 .button {
