--- a/react-app/src/components/Chat/Chat.module.css
+++ b/react-app/src/components/Chat/Chat.module.css
@@ -18,6 +18,7 @@
     justify-content: center;
     align-items: center;
     overflow-y: scroll;
+    overscroll-behavior-y: contain;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
