--- a/react-app/src/components/Chat/Chat.module.css
+++ b/react-app/src/components/Chat/Chat.module.css
@@ -10,8 +10,10 @@
 }
 
 .chats {
+    box-sizing: border-box;
     display: flex;
-    max-height: 10rem;
+    height: 10rem;
+    width: 25rem;
     background-color: #029e7e;
     border: 2px solid black;
     flex-direction: column;
