--- a/react-app/src/components/Signup/SignupForm.module.css
+++ b/react-app/src/components/Signup/SignupForm.module.css
@@ -1,13 +1,33 @@
+label {
+    display: flex;
+    color: #029e7e;
+    font-size: 30px;
+    padding: 0 5px 0 0;
+    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
+}
+input[type="text"],
+input[type="url"],
+input[type="email"],
+input[type="password"] {
+    font-size: 1rem;
+}
+
 .form {
+    box-sizing: border-box;
     background-color: #195905;
     border-radius: 5px;
     padding: 10px;
+    width: 800px;
+    height: 500px;
 }
 
 .field {
+    box-sizing: border-box;
     color: black;
     border: 4px solid #029e7e;
     padding: 25px;
+    width: 780px;
+    height: 480px;
 }
 
 .legend {
@@ -20,65 +40,40 @@
 }
 
 .usernameWrapper {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.usernameLabel {
-    justify-content: center;
-    color: #029e7e;
-    font-size: 30px;
-    padding: 0 5px 0 0;
-    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
+    padding: 0.65rem 0.5rem;
 }
 
 .avatarWrapper {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.avatarLabel {
-    justify-content: center;
-    color: #029e7e;
-    font-size: 30px;
-    padding: 0 5px 0 0;
-    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
+    padding: 0.65rem 0.5rem;
 }
 
 .emailWrapper {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.emailLabel {
-    justify-content: center;
-    color: #029e7e;
-    font-size: 30px;
-    padding: 0 5px 0 0;
-    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
+    padding: 0.65rem 0.5rem;
 }
 
 .passwordWrapper {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.passwordLabel {
-    justify-content: center;
-    color: #029e7e;
-    font-size: 30px;
-    padding: 0 5px 0 0;
-    text-shadow: 1px 1px 1px black, 2px 2px 2px black;
+    padding: 0.65rem 0.5rem;
 }
 
 .buttonContainer {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
 }
 
 .button {
