--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -6,3 +6,36 @@
     font-family: "Spectral", serif;
     box-sizing: border-box;
 }
+
+:root {
+    --form-main-bg: #195905;
+    --form-secondary-bg: #029e7e;
+    --color-malachite: #0bda51;
+    --gray-900: #1a202c;
+    --gray-800: #2d3748;
+    --gray-700: #4a5568;
+    --gray-600: #718096;
+    --gray-500: #a0aec0;
+    --gray-400: #cbd5e0;
+    --gray-300: #e2e8f0;
+    --gray-200: #edf2f7;
+    --gray-100: #f7fafc;
+    --red-100: #fff5f5;
+    --red-200: #fed7d7;
+    --red-300: #feb2b2;
+    --red-400: #fc8181;
+    --red-500: #f56565;
+    --red-600: #e53e3e;
+    --red-700: #c53030;
+    --red-800: #9b2c2c;
+    --red-900: #742a2a;
+    --blue-100: #ebf8ff;
+    --blue-200: #bee3f8;
+    --blue-300: #90cdf4;
+    --blue-400: #63b3ed;
+    --blue-500: #4299e1;
+    --blue-600: #3182ce;
+    --blue-700: #2b6cb0;
+    --blue-800: #2c5282;
+    --blue-900: #2a4365;
+}
