--- a/react-app/src/components/Signup/SignupForm.module.css
+++ b/react-app/src/components/Signup/SignupForm.module.css
@@ -5,20 +5,20 @@ label {
     padding: 0 5px 0 0;
     text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
-input[type="text"],
+/* input[type="text"],
 input[type="url"],
 input[type="email"],
 input[type="password"] {
     font-size: 1rem;
-}
+} */
 
 .form {
     box-sizing: border-box;
     background-color: #195905;
     border-radius: 5px;
     padding: 10px;
-    width: 800px;
-    height: 500px;
+    width: 600px;
+    height: 700px;
 }
 
 .field {
@@ -26,8 +26,8 @@ input[type="password"] {
     color: black;
     border: 4px solid #029e7e;
     padding: 25px;
-    width: 780px;
-    height: 480px;
+    width: 580px;
+    height: 680px;
 }
 
 .legend {
@@ -39,12 +39,15 @@ input[type="password"] {
     color: black;
 }
 
+.inputs{
+    width:100%;
+}
+
 .usernameWrapper {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0.65rem 0.5rem;
 }
 
 .avatarWrapper {
@@ -52,7 +55,6 @@ input[type="password"] {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0.65rem 0.5rem;
 }
 
 .emailWrapper {
@@ -60,7 +62,6 @@ input[type="password"] {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0.65rem 0.5rem;
 }
 
 .passwordWrapper {
@@ -68,7 +69,6 @@ input[type="password"] {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0.65rem 0.5rem;
 }
 
 .buttonContainer {
