--- a/react-app/src/components/Formik/Formik.module.css
+++ b/react-app/src/components/Formik/Formik.module.css
@@ -1,8 +1,3 @@
-.input-feedback {
-    color: red;
-    margin-top: 0.25rem;
-}
-
 .error {
     color: red;
 }
@@ -11,18 +6,25 @@
     color: #0bda51;
 }
 
-.form-control {
+.formControl {
     margin-top: 1rem;
-    width: 250px;
+    width: 100%;
+}
+
+input[type="email"],
+input[type="text"],
+input[type="url"],
+input[type="password"] {
+    width: 100%;
 }
 
 .valid input[type="email"],
 .valid input[type="text"],
 .valid input[type="url"],
 .valid input[type="password"] {
-    border-color:#0bda51;
+    border-color: #0bda51;
+    width: 100%;
     font-size: 1rem;
-
 }
 
 .valid .feedback {
@@ -31,10 +33,10 @@
 
 .invalid input[type="email"],
 .invalid input[type="text"],
-.invalid input[type="url"], 
+.invalid input[type="url"],
 .invalid input[type="password"] {
     border-color: red;
-    width: 250px;
+    width: 100%;
     font-size: 1rem;
 }
 
@@ -42,16 +44,12 @@
     color: red;
 }
 
-.textXs{
+.textXs {
     overflow-wrap: break-word;
     word-break: break-word;
     width: 216px;
-    color:black;
+    color: black;
     font-weight: 600;
     font-size: 15px;
-    padding-top:5px;
-}
-
-.textInput{
-    width: 270px;
+    padding-top: 5px;
 }
