--- a/react-app/src/components/Signup/SignupForm.module.css
+++ b/react-app/src/components/Signup/SignupForm.module.css
@@ -17,8 +17,6 @@ input[type="password"] {
     background-color: #195905;
     border-radius: 5px;
     padding: 10px;
-    width: 600px;
-    height: 700px;
 }
 
 .field {
@@ -26,8 +24,6 @@ input[type="password"] {
     color: black;
     border: 4px solid #029e7e;
     padding: 25px;
-    width: 580px;
-    height: 680px;
 }
 
 .legend {
@@ -39,15 +35,12 @@ input[type="password"] {
     color: black;
 }
 
-.inputs{
-    width:100%;
-}
-
 .usernameWrapper {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 10px 0;
 }
 
 .avatarWrapper {
@@ -55,6 +48,7 @@ input[type="password"] {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
 .emailWrapper {
@@ -62,6 +56,7 @@ input[type="password"] {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
 .passwordWrapper {
@@ -69,6 +64,7 @@ input[type="password"] {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
 .buttonContainer {
