--- a/react-app/src/components/Signup/SignupForm.module.css
+++ b/react-app/src/components/Signup/SignupForm.module.css
@@ -13,10 +13,14 @@ input[type="password"] {
 } */
 
 .form {
+    position: relative;
     box-sizing: border-box;
     background-color: #195905;
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px;
+    width: 32vw;
+    height: 46vh;
+    margin: 0;
 }
 
 .field {
@@ -24,6 +28,9 @@ input[type="password"] {
     color: black;
     border: 4px solid #029e7e;
     padding: 25px;
+    width: 31vw;
+    height: 44vh;
+    margin: 2px;
 }
 
 .legend {
@@ -40,7 +47,7 @@ input[type="password"] {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10px 0;
+    margin-bottom: 10px;
 }
 
 .avatarWrapper {
@@ -70,6 +77,7 @@ input[type="password"] {
 .buttonContainer {
     display: flex;
     justify-content: center;
+    margin-top: 20px;
 }
 
 .button {
