--- a/react-app/src/components/Formik/Formik.module.css
+++ b/react-app/src/components/Formik/Formik.module.css
@@ -11,8 +11,24 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
-    grid-template-areas: "label" "error" "input";
+    grid-template-areas: "label" "input" "feedback";
     align-items: center;
+}
+
+.label {
+    grid-area: label;
+}
+
+.input {
+    grid-area: input;
+}
+
+.feedback {
+    grid-area: feedback;
+}
+
+input:focus-visible {
+    outline: 2px solid var(--blue-600);
 }
 
 input[type="email"],
@@ -20,13 +36,14 @@ input[type="text"],
 input[type="url"],
 input[type="password"] {
     width: 90%;
+    border-color: black;
 }
 
 .valid input[type="email"],
 .valid input[type="text"],
 .valid input[type="url"],
 .valid input[type="password"] {
-    border-color: #0bda51;
+    border: 2px solid #0bda51;
     width: 90%;
     font-size: 1rem;
 }
@@ -39,21 +56,11 @@ input[type="password"] {
 .invalid input[type="text"],
 .invalid input[type="url"],
 .invalid input[type="password"] {
-    border-color: red;
+    border: 2px solid red;
     width: 90%;
     font-size: 1rem;
 }
 
 .invalid .feedback {
     color: red;
-}
-
-.textXs {
-    overflow-wrap: break-word;
-    word-break: break-word;
-    width: 216px;
-    color: black;
-    font-weight: 600;
-    font-size: 15px;
-    padding-top: 5px;
 }
