added start of styling for mobile

--- a/react-app/src/components/SplashPage/SplashPage.module.css
+++ b/react-app/src/components/SplashPage/SplashPage.module.css
@@ -1,8 +1,28 @@
 .splash {
     height: 100%;
     background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/NFLbackground.jpg);
-    background-size: cover;
+    background-size: contain;
+    background-attachment: fixed;
 }
+
+/*
+* This media query is used for: iPhone 13 Pro Max and iPhone 12 Pro Max
+2778x1284 pixels at 458ppi
+
+
+@media only screen and (device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) {
+    
+} 
+/*
+
+* This code is for large monitor 
+.splash {
+    height: 100%;
+    background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/NFLbackground.jpg);
+    background-size: contain;
+    background-attachment: fixed;
+}; 
+*/
 
 .wrapper {
     display: flex;
