--- a/react-app/src/components/SplashPage/SplashPage.module.css
+++ b/react-app/src/components/SplashPage/SplashPage.module.css
@@ -1,4 +1,4 @@
-.splash {
+.background {
     height: 100%;
     background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/NFLbackground.jpg);
     background-size: contain;
@@ -24,8 +24,9 @@
 }; 
 */
 
-.wrapper {
-    display: flex;
+.main {
+    display: grid;
+
     flex-direction: column;
     align-items: center;
     background-color: transparent;
@@ -34,44 +35,42 @@
 }
 
 .titleContainer {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.title {
-    border: 2px solid black;
-    border-radius: 2px;
-    box-shadow: 0 0 5px lightgreen;
-    padding: 10px 20px;
-    background-color: #195905;
-    font-size: 80px;
-    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
-    margin: 5px;
-}
-
-.subtitleContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 2px solid black;
-    border-radius: 2px;
-    box-shadow: 0 0 5px lightgreen;
+    position: relative;
+    top: 12vh;
+}
+
+.title {
+    color: whitesmoke;
     padding: 10px 20px;
-    background-color: #195905;
-    font-size: 80px;
+    font-size: 8rem;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
+    margin: 5px;
+    text-align: center;
+    font-weight: 600;
+}
+
+.subtitleContainer {
+    position: relative;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 20px;
     margin: 5px;
 }
 
 .subtitle1 {
-    font-size: 80px;
+    font-size: 8rem;
+    text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
     margin: 5px;
 }
 .subtitle2 {
-    font-size: 80px;
+    font-size: 8rem;
     margin: 5px;
 }
 
