--- a/react-app/src/components/Footer/Footer.module.css
+++ b/react-app/src/components/Footer/Footer.module.css
@@ -1,23 +1,44 @@
-.footerContainer {
-    position: sticky;
+.footer {
+    position: fixed;
     bottom: 0;
-    width: 100%;
-    border-top-color: aliceblue;
-    border-top-style: solid;
-    border-top-width: 2px;
-    background-color: #087830;
+    left: 0;
+    right: 0;
+    min-width: 100%;
 }
-.logoContainer,
-.linkedIn,
-.github,
-img {
-    position: relative;
-    max-width: 6vh;
-    align-content: center;
-}
+
 .dev {
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+        ". linkedin github"
+        "name linkedin github";
     justify-content: center;
     align-items: center;
-    font-size: 25px;
+    border-color: aliceblue;
+    border-style: solid;
+    border-width: 2px;
+    background: no-repeat center center
+        url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/sideline_cropped.jpg);
+    background-size: cover;
+    min-height: 5vh;
+}
+
+.linkedIn {
+    grid-area: linkedin;
+}
+
+.github {
+    grid-area: github;
+}
+
+img {
+    max-width: 100px;
+    max-height: 100px;
+}
+
+.name {
+    grid-area: name;
+    font-weight: 600;
+    font-size: 1.5rem;
 }
