--- a/react-app/src/components/Nav/NavBar.module.css
+++ b/react-app/src/components/Nav/NavBar.module.css
@@ -1,3 +1,12 @@
+.header {
+    position: fixed;
+    min-width: 100%;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
 .nav {
     display: flex;
     justify-content: space-between;
@@ -5,12 +14,9 @@
     border-color: aliceblue;
     border-style: solid;
     border-width: 2px;
-    background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/sideline_cropped.jpg);
+    background: no-repeat center center
+        url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/sideline_cropped.jpg);
     background-size: cover;
-    position: sticky;
-    z-index: 2;
-    top: 0;
-    max-width: 100%;
     min-height: 5vh;
 }
 
