--- a/react-app/src/App.module.css
+++ b/react-app/src/App.module.css
@@ -1,8 +1,27 @@
-.appContainer {
+.app {
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-areas:
+        "navbar"
+        "main"
+        "footer";
+}
+
+.navBar {
+    grid-area: navbar;
+}
+
+.main {
+    grid-area: main;
+}
+
+.footer {
+    grid-area: footer;
 }
