--- a/react-app/src/components/Footer/Footer.module.css
+++ b/react-app/src/components/Footer/Footer.module.css
@@ -26,6 +26,8 @@
 
 .linkedIn {
     grid-area: linkedin;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .github {
@@ -33,8 +35,8 @@
 }
 
 img {
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 75px;
+    max-height: 75px;
 }
 
 .name {
