--- a/react-app/src/components/SplashPage/SplashPage.module.css
+++ b/react-app/src/components/SplashPage/SplashPage.module.css
@@ -1,11 +1,11 @@
 .background {
-    background: no-repeat center center fixed
+    background: no-repeat center center
         url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/NFLbackground.jpg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    min-height: 100vh;
+    height: 100%;
     background-attachment: fixed;
 }
 
@@ -26,14 +26,14 @@
 }; 
 */
 
-.main {
+/* .main {
     display: grid;
     flex-direction: column;
     align-items: center;
     background-color: transparent;
     position: relative;
     top: 2px;
-}
+} */
 
 .titleContainer {
     display: flex;
@@ -49,7 +49,7 @@
     padding: 10px 20px;
     font-size: 8rem;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
-    margin: 5px;
+    margin: 0;
     text-align: center;
     font-weight: 600;
 }
