--- a/react-app/src/components/SplashPage/SplashPage.module.css
+++ b/react-app/src/components/SplashPage/SplashPage.module.css
@@ -95,7 +95,8 @@
     background-color: rgba(229, 228, 226, 0.5);
     padding: 10px;
     font-size: 5rem;
-    text-shadow: 1px 1px 2px black, 0 0 1em red, 0 0 0.2em red
+    font-weight: 800;
+    text-shadow: 1px 1px 2px black, 0 0 1em red, 0 0 0.2em red;
 }
 
 .button:hover {
