--- a/react-app/src/components/Title/Title.module.css
+++ b/react-app/src/components/Title/Title.module.css
@@ -5,18 +5,18 @@
     padding: 10px;
     background-color: rgba(46, 139, 87, 0.8);
     border-radius: 2px;
-    border-style: inset;
+    border-style: outset;
     min-width: 100%;
     border: 5px solid darkgreen;
 }
 
 .title {
     display: flex;
+    width: 95%;
     align-items: center;
     justify-content: center;
-    font-size: 40px;
+    font-size: 2rem;
     font-weight: 600;
     border-bottom: 2px solid darkgreen;
-    margin: 5px;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
 }
