--- a/react-app/src/components/UserInfo/UserInfo.module.css
+++ b/react-app/src/components/UserInfo/UserInfo.module.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    font-size: 30px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: darkgreen;
     text-shadow: 1px 1px 1px black, 2px 2px 1px #0bda51;
