--- a/react-app/src/components/Footer/Footer.module.css
+++ b/react-app/src/components/Footer/Footer.module.css
@@ -30,12 +30,13 @@
 }
 
 img {
-    max-width: 75px;
-    max-height: 75px;
+    max-width: 50px;
+    max-height: 50px;
 }
 
 .name {
     grid-area: name;
     font-weight: 600;
     font-size: 1.5rem;
+    text-shadow: 1px 1px 2px black, 0 0 1em white, 0 0 0.2em white;
 }
