--- a/react-app/src/components/SplashPage/SplashPage.module.css
+++ b/react-app/src/components/SplashPage/SplashPage.module.css
@@ -100,7 +100,7 @@
 }
 
 .button:hover {
-    background-color: #0bda51;
-    font-size: 28px;
-    text-shadow: 1px 1px 1px black, 2px 2px 1px #195905;
+    color: whitesmoke;
+    background-color: rgb(204, 0, 0);
+    text-shadow: 1px 1px 2px black, 0 0 1em red, 0 0 0.2em red;
 }
