--- a/react-app/src/components/Channels/Channels.module.css
+++ b/react-app/src/components/Channels/Channels.module.css
@@ -20,7 +20,7 @@
     border: 2px solid darkgreen;
     border-radius: 2px;
     box-shadow: 0 0 5px lightgreen;
-    border-style: inset;
+    border-style: outset;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -70,7 +70,7 @@
     border: 2px solid darkgreen;
     border-radius: 2px;
     box-shadow: 0 0 5px lightgreen;
-    border-style: inset;
+    border-style: outset;
     padding: 5px;
 }
 
