--- a/react-app/src/components/EditChannelForm/EditChannelForm.module.css
+++ b/react-app/src/components/EditChannelForm/EditChannelForm.module.css
@@ -71,7 +71,7 @@
     border: 2px solid darkgreen;
     border-radius: 2px;
     box-shadow: 0 0 5px lightgreen;
-    border-style: inset;
+    border-style: outset;
     background-color: black;
 }
 .iconButtonWrapper {
