--- a/react-app/src/components/Server/Server.module.css
+++ b/react-app/src/components/Server/Server.module.css
@@ -1,14 +1,20 @@
 .background {
-    margin: 0;
-    min-height: 100%;
     background-image: url(https://fantasydepthchart.s3.us-west-1.amazonaws.com/Assets/stadium_from_above_horizontal.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    background-position-x: center;
+    background-position-y: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    height: 100%;
 }
 
 .contentWrapper {
     display: grid;
     grid-template-columns: 0.5fr 7.5fr 2fr;
-    grid-template-rows: 100vh;
+    grid-template-rows: 86vh;
     grid-template-areas: "servers main friends";
 }
 
